# cloud-file-signer

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: build.yml
src/: error.rs  lib.rs  main.rs  permissions.rs  presigned_url.rs
src/aws/: mod.rs  uri.rs
src/azure/: mod.rs  uri.rs
src/gcp/: mod.rs  uri.rs
test/: adls_signer.rs  gcs_signer.rs  s3_signer.rs
tests/: adls_signer.rs  s3_signer.rs
