[package]
name = "cloud-file-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
aws-credential-types = {version="1.0.3", features = ["hardcoded-credentials"]}
aws-sdk-s3 = { version = "1.5.0", features = ["behavior-version-latest"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
time = { version = "0.3.30", features = ["local-offset"] }
azure_core = "0.17.0"
azure_storage = "0.17.0"
azure_storage_blobs = "0.17.0"
google-cloud-storage = "0.15.0"
http = "1.0.0"
regex = "1.10.2"
tracing = "0.1.40"


[dev-dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
test-log = { version = "0.2.14", features = ["trace"] }
tokio = { version = "1.35.0", features = ["full"] }
