[package]
name = "cloud-file-signer"
version = "0.1.0"
authors = ["Tim Dikland <timdikland@gmail.com>"]
edition = "2021"
rust-version = "1.72.1"
description = "A uniform interface for signing cloud object storage URLs"
readme = "README.md"
repository = "https://github.com/tdikland/cloud-file-signer"
license = "MIT"
keywords = ["presign", "url", "cloud", "storage", "object"]
categories = ["web-programming", "filesystem"]


[dependencies]
async-trait = { version = "0.1.74" }
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.0.3", features = [
    "hardcoded-credentials",
] }
aws-sdk-s3 = { version = "1.5.0", features = ["behavior-version-latest"] }
time = { version = "0.3.30", features = ["local-offset"] }
azure_core = "0.17.0"
azure_storage = "0.17.0"
azure_storage_blobs = "0.17.0"
google-cloud-storage = "0.15.0"
http = "1.0.0"
regex = "1.10.2"
tracing = "0.1.40"
chrono = "0.4.31"


[dev-dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
test-log = { version = "0.2.14", features = ["trace"] }
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
